NXP-33393: cleanup / format